# Amazons-Linux

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  amazons.desktop.in  manifest.json.in
plugins/: CMakeLists.txt
plugins/Amazons/: CMakeLists.txt  amazons.cpp  amazons.h  plugin.cpp  plugin.h  qmldir
plugins/Amazons/lib/: libamazons.h
po/: amazons.arc676.pot  de.po  es.po  fr.po  nl.po
qml/: AboutView.qml  ConfirmDialog.qml  DefaultHeader.qml  GameView.qml  Main.qml  RulesView.qml  SetupView.qml  WrappingLabel.qml
